# 3STalent

./: Dockerfile  EXAMPLE.env  compose.override.yml  compose.yml  pyproject.toml
experimental/: app.py  database_settings.json  text2sql_engine.py
experimental/CVprocessing/: CVDataExtractor.py  CVDatabaseConnectionManager.py  CVProcessor.py  embeddings_helper.py
experimental/data_preparation/: run_sql_data_extraction.py
experimental/data_preparation/utils/: db_embeddings_extractor.py  ddl_data_extractor.py  table_info_vectorizer.py
experimental/database/full_db/: 01_hiring_db_schema_definition.sql  02_hiring_db_data_init.sql
experimental/database/init/: 01_hiring_db_schema_definition.sql  02_hiring_db_data_init.sql
experimental/db_files/hiring_db/: database_summary.txt
experimental/db_files/hiring_db/extracted_data/table_data_index/candidati/: default__vector_store.json  docstore.json  index_store.json
experimental/db_files/hiring_db/extracted_data/table_data_index/candidature/: default__vector_store.json  (+2 more)
experimental/db_files/hiring_db/extracted_data/table_infos/: 0_candidati.json  1_esperienze_lavorative.json  2_formazione.json  3_competenze_candidati.json  4_offerte_lavoro.json  5_candidature.json  6_colloqui.json  candidati.json  candidature.json  colloqui.json  competenze_candidati.json  esperienze_lavorative.json  formazione.json  offerte_lavoro.json
experimental/db_files/hiring_db/init/: Dump_hiring_db.sql
experimental/prompts/: text2sql_prompts.py
experimental/text2sql_workflow/: Text2SqlWorkflow.py  WorkflowClasses.py  WorkflowUtils.py
(+15 files in other folders)
