[project]
name = "magichiring"
version = "0.1.0"
description = ""
authors = [
    {name = "lorenzo",email = "thelorma200@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "llama-index (>=0.12.35,<0.13.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pymysql (==1.1.1)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pdfplumber (>=0.11.8,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
